New layouts added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,5 @@
     <string name="phonenumber">0718732506/0771013110</string>
     <string name="devemail">daltonleyian@gmail.com</string>
     <string name="devlocation">Kileleshwa Banor\'s Plaza 12th floor 206B</string>
+    <string name="send">SEND</string>
 </resources>
