--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,7 @@
     <string name="devemail">daltonleyian@gmail.com</string>
     <string name="devlocation">Kileleshwa Banor\'s Plaza 12th floor 206B</string>
     <string name="send">SEND</string>
+    <string name="patientmessages">PATIENT\'S MESSAGES</string>
+    <string name="age">AGE</string>
+    <string name="county">COUNTY</string>
 </resources>
