--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="departmentCAPS">DEPARTMENT</string>
     <string name="dateCAPS">DATE</string>
     <string name="timeavailableCAPS">TIME AVAILABLE</string>
-    <string name="details">FLL IN YOUR DETAILS</string>
+    <string name="details">FILL IN YOUR DETAILS</string>
     <string name="symptomshint">Describe your symptoms</string>
     <string name="newAppointment">NEW APPOINTMENT</string>
     <string name="canelAppointment">ARE YOU SURE YOU WANT TO CANCEL THIS APPOINTMENT?</string>
@@ -113,8 +113,14 @@
     <string name="upcoming_appointment">Upcoming Appointments</string>
     <string name="hello">HELLO, DALTON!</string>
     <string name="consultation">CONSULTATION</string>
-    <string name="date">05, February 2023</string>
+    <string name="date">06, February 2023</string>
     <string name="reports_word">REPORTS</string>
     <string name="history">HISTORY</string>
     <string name="not_yet_assigned">"Not yet assigned"</string>
+    <string name="time">TIME</string>
+    <string name="date_available">DATE AVAILABLE</string>
+    <string name="patients_age">PATIENT\'S AGE</string>
+    <string name="enter_age">Enter age here</string>
+    <string name="select_date_new">Select Date</string>
+    <string name="description">Appointment description</string>
 </resources>
