--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,5 @@
     <string name="patient_name">Patient\'s Name</string>
     <string name="mark_attended">Mark Attended</string>
     <string name="cancel_Appointment">Cancel Appointment</string>
+    <string name="age_Small">Age</string>
 </resources>
