UPDATE - Added new launcher screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="login">LOGIN</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="sign_in">SIGN IN?</string>
+    <string name="sign_in">SIGN IN</string>
     <string name="my_appointments">MY APPOINTMENTS</string>
     <string name="forgot_password">forgot password?</string>
     <string name="Occupation">SELECT A SUITABLE OPTION BELOW</string>
