UPDATE - Doc User Profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="enter_code_text">ENTER CODE</string>
     <string name="code_admin">ENTER ADMIN CODE BELOW</string>
     <string name="proceedbutton">PROCEED</string>
-    <string name="bookappointment">BOOK AN APPOINTMENT</string>
+    <string name="bookappointment">BOOK APPOINTMENT</string>
     <string name="consult_a_doctor">CONSULT A DOCTOR</string>
     <string name="appointments_history">APPOINTMENTS HISTORY</string>
     <string name="contact_us">CONTACT US</string>
