UPDATE - Doc User Profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,6 +146,6 @@
     <string name="profile">MY PROFILE</string>
     <string name="upload_profile">Upload Your Profile Picture</string>
     <string name="choosePicture">Choose Picture</string>
-    <string name="upload">Upload</string>
+    <string name="upload">Upload Picture</string>
     <string name="patient_age">Patient\'s Age</string>
 </resources>
