--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,4 +155,5 @@
     <string name="description_report">Write Report For Patient To Read</string>
     <string name="select_email">Select an Email To View Doctors Details</string>
     <string name="swipe">swipe</string>
+    <string name="health_updates">Get Health Updates</string>
 </resources>
