Worked on the admin appointments and notify when no new appointment is available

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
     <string name="swipe">swipe</string>
     <string name="health_updates">Get Health Updates</string>
     <string name="no_appointments">No New  Appointments Today</string>
+    <string name="appointments_cancelled">APPOINTMENTS CANCELLED</string>
 </resources>
